// Copyright (c) 2019 Target Brands, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
import "mfg_batch_state.proto";
import "schema_state.proto";

message MfgBatchPayload {
    enum Action {
        UNSET_ACTION = 0;
        MFG_BATCH_CREATE = 1;
        MFG_BATCH_UPDATE = 2;
        MFG_BATCH_DELETE = 3;
    }

    Action action = 1;

    // Approximately when transaction was submitted, as a Unix UTC
    // timestamp
    uint64 timestamp = 2;

    MfgBatchCreateAction mfg_batch_create = 3;
    MfgBatchUpdateAction mfg_batch_update = 4;
    MfgBatchDeleteAction mfg_batch_delete = 5;
}

message MfgBatchCreateAction {
    // mfg_batch_namespace and mfg_batch_id are used in deriving the state address
    MfgBatch.MfgBatchNamespace mfg_batch_namespace = 1;
    string mfg_batch_id = 2;
    string owner = 3;
    repeated PropertyValue properties = 4;
}

message MfgBatchUpdateAction {
    // mfg_batch_namespace and mfg_batch_id are used in deriving the state address
    MfgBatch.MfgBatchNamespace mfg_batch_namespace = 1;
    string mfg_batch_id = 2;
    // this will replace all properties currently defined
    repeated PropertyValue properties = 3;
}

message MfgBatchDeleteAction {
    // mfg_batch_namespace and mfg_batch_id are used in deriving the state address
    MfgBatch.MfgBatchNamespace mfg_batch_namespace = 1;
    string mfg_batch_id = 2;
 }
